inicio del proyecto

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,17 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="root"></div>
+    <p>escribe tu mensaje</p>
+    <div id="root">
+      <p>encriptado</p>
+      <textarea name="" id="" cols="30" rows="10"></textarea>
+      <br>
+      <input type="button" value="enviar">
+      <p>descriptado</p>
+      <textarea name="" id="" cols="30" rows="10"></textarea>
+      <br>
+      <input type="button" value="enviar">
+    </div>
     <script src="cipher.js"></script>
     <script src="index.js"></script>
   </body>
