--- a/src/index.html
+++ b/src/index.html
@@ -6,18 +6,23 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <p>escribe tu mensaje</p>
-    <div id="root">
-      <p>encriptado</p>
-      <textarea name="" id="" cols="30" rows="10"></textarea>
-      <br>
-      <input type="button" value="enviar">
-      <p>descriptado</p>
-      <textarea name="" id="" cols="30" rows="10"></textarea>
-      <br>
-      <input type="button" value="enviar">
-    </div>
-    <script src="cipher.js"></script>
+      <div >
+          <h3>mensaje para encriptar</h3>
+          <br>
+          <textarea id="encode" ></textarea>
+      </div>
+      <div >
+          <h3>clave</h3>
+          <br>
+        <input type="number" id="clave" min="0" max="5" value="0"><br>
+          <input type="submit" onclick="encode()" value="encode"><br>
+      </div>
+      <div>
+          <h3>mensaje:</h3>
+          <br>
+          <textarea id="chains" ></textarea>
+      </div> 
+     <script src="cipher.js"></script>
     <script src="index.js"></script>
   </body>
 </html>
