--- a/src/index.html
+++ b/src/index.html
@@ -14,13 +14,13 @@
       <div >
           <h3>clave</h3>
           <br>
-        <input type="number" id="clave" min="0" max="5" value="0"><br>
+        <input type="number" id="clave" ><br>
           <input type="submit" onclick="encode()" value="encode"><br>
       </div>
       <div>
           <h3>mensaje:</h3>
           <br>
-          <textarea id="chains" ></textarea>
+          <textarea id="mensaje" ></textarea>
       </div> 
      <script src="cipher.js"></script>
     <script src="index.js"></script>
