--- a/src/index.html
+++ b/src/index.html
@@ -1,28 +1,20 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Caesar Cipher</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
+ <head>
+   <meta charset="utf-8">
+   <title>Caesar Cipher</title>
+ </head>
   <body>
-      <div >
-          <h3>mensaje para encriptar</h3>
-          <br>
-          <textarea id="encode" ></textarea>
-      </div>
-      <div >
-          <h3>clave</h3>
-          <br>
-        <input type="number" id="clave" ><br>
-          <input type="submit" onclick="encode()" value="encode"><br>
-      </div>
+   <form id = encode>
+     <h2>Encriptar</h2>
+     <textarea name="" id="mensaje" ></textarea>
+      <input type="button" value="click" id="button-encriptar">
+     <input type="number" id="clave" name="name" value="">
+   </form>
+    <div>
+     <textarea name="" id="final" ></textarea>
       <div>
-          <h3>mensaje:</h3>
-          <br>
-          <textarea id="mensaje" ></textarea>
-      </div> 
-     <script src="cipher.js"></script>
+    <script src="cipher.js"></script>
     <script src="index.js"></script>
-  </body>
+</body>
 </html>
