--- a/src/index.html
+++ b/src/index.html
@@ -1,23 +1,20 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Caesar Cipher</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
+ <head>
+   <meta charset="utf-8">
+   <title>Caesar Cipher</title>
+ </head>
   <body>
-    <p>escribe tu mensaje</p>
-    <div id="root">
-      <p>encriptado</p>
-      <textarea name="" id="" cols="30" rows="10"></textarea>
-      <br>
-      <input type="button" value="enviar">
-      <p>descriptado</p>
-      <textarea name="" id="" cols="30" rows="10"></textarea>
-      <br>
-      <input type="button" value="enviar">
-    </div>
+   <form >
+     <h2>Encode</h2>
+     <textarea name="" id="mensaje" ></textarea>
+     <input type="number" id="clave" name="name" min="0" max="33">
+     <input type="button" value="click" id="button-encriptar">
+    </form>
+    <textarea name="" id="final" ></textarea>
+    
+    <textarea name="" id="final2" ></textarea>
     <script src="cipher.js"></script>
     <script src="index.js"></script>
-  </body>
+</body>
 </html>
