funcion encode y estilos

--- a/src/index.html
+++ b/src/index.html
@@ -3,17 +3,17 @@
  <head>
    <meta charset="utf-8">
    <title>Caesar Cipher</title>
+   <link rel="stylesheet" href="style.css">
  </head>
   <body>
    <form >
+     <h1>fiesta sorpresa</h1>
      <h2>Encode</h2>
      <textarea name="" id="mensaje" ></textarea>
      <input type="number" id="clave" name="name" min="0" max="33">
      <input type="button" value="click" id="button-encriptar">
     </form>
     <textarea name="" id="final" ></textarea>
-    
-    <textarea name="" id="final2" ></textarea>
     <script src="cipher.js"></script>
     <script src="index.js"></script>
 </body>
