cambios en css y html

--- a/src/index.html
+++ b/src/index.html
@@ -6,14 +6,20 @@
    <link rel="stylesheet" href="style.css">
  </head>
   <body>
+    <h1> Fiesta sorpresa</h1>
    <form >
-     <h1>fiesta sorpresa</h1>
-     <h2>Encode</h2>
+     <h2>Esconde tu mensaje secreto  </h2>
      <textarea name="" id="mensaje" ></textarea>
      <input type="number" id="clave" name="name" min="0" max="33">
-     <input type="button" value="click" id="button-encriptar">
-    </form>
+     <input type="button" name= "click" value="enviar" id="button-encriptar">
     <textarea name="" id="final" ></textarea>
+     <h2>Muestra tu secreto</h2>
+     <textarea name="" id="mensaje2"></textarea>
+     
+   </form>
+   
+  
+    
     <script src="cipher.js"></script>
     <script src="index.js"></script>
 </body>
