funcion decode , estilos y html

--- a/src/index.html
+++ b/src/index.html
@@ -2,24 +2,26 @@
 <html>
  <head>
    <meta charset="utf-8">
-   <title>Caesar Cipher</title>
+   <title> My Secret </title>
    <link rel="stylesheet" href="style.css">
  </head>
   <body>
     <h1> Fiesta sorpresa</h1>
-   <form >
+    <div>
+     <h2>Ingrese un numero</h2>
+     <input type="number" id="key" name="name" min="0" max="33" >
      <h2>Esconde tu mensaje secreto  </h2>
-     <textarea name="" id="mensaje" ></textarea>
-     <input type="number" id="clave" name="name" min="0" max="33">
-     <input type="button" name= "click" value="enviar" id="button-encriptar">
-    <textarea name="" id="final" ></textarea>
-     <h2>Muestra tu secreto</h2>
-     <textarea name="" id="mensaje2"></textarea>
-     
-   </form>
-   
-  
+      <textarea name="" id="menssage1" ></textarea>
+     <input type="button" name = "click" value="Esconder" id="button-encode">
+     <br><br>
+     <textarea name="" id="encodemessage" ></textarea>
     
+     <h2>Muestra tu mensaje secreto</h2>
+     <textarea name="" id="menssage2" ></textarea>  
+     <input type="button" name="click" value="Mostrar"  id="button-decode">
+     <br><br>
+     <textarea name="" id="decodemessage" ></textarea>
+    </div>
     <script src="cipher.js"></script>
     <script src="index.js"></script>
 </body>
