--- a/src/index.html
+++ b/src/index.html
@@ -5,24 +5,24 @@
    <title> My Secret </title>
    <link rel="stylesheet" href="style.css">
  </head>
-  <body>
+ <body>
+   <div class="contenedor"> 
     <h1> Fiesta sorpresa</h1>
-    <div>
-     <h2>Ingrese un numero</h2>
-     <input type="number" id="key" name="name" min="0" max="33" >
-     <h2>Esconde tu mensaje secreto  </h2>
-      <textarea name="" id="menssage1" ></textarea>
-     <input type="button" name = "click" value="Esconder" id="button-encode">
-     <br><br>
-     <textarea name="" id="encodemessage" ></textarea>
-    
-     <h2>Muestra tu mensaje secreto</h2>
-     <textarea name="" id="menssage2" ></textarea>  
-     <input type="button" name="click" value="Mostrar"  id="button-decode">
-     <br><br>
-     <textarea name="" id="decodemessage" ></textarea>
+    <label for="key">Ingrese un numero</label> 
+    <input type="number" id="key" name="key" min="0" max="33" >
+    <section>
+     <label for="menssage-encode">Esconde tu mensaje secreto  </label>
+     <textarea  id="menssage-encode" ></textarea>
+     <input type="button" name ="click" value="Esconder" id="button-encode">  
+    </section>
+    <section>
+     <label for="menssage-decode">Muestra tu mensaje secreto</label>
+     <textarea  id="menssage-decode" ></textarea>  
+     <input type="button" name="click" value="Mostrar"  id="button-decode">  
+    </section>
+    <textarea name="" id="encodedecodemessage" readonly="readonly"></textarea>
     </div>
     <script src="cipher.js"></script>
     <script src="index.js"></script>
-</body>
+  </body>
 </html>
