--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,16 @@
    <meta charset="utf-8">
    <title> My Secret </title>
    <link rel="stylesheet" href="style.css">
-   
-   <!-- <meta name="viewport" content="width=device-width,user-scalable=no ,initial-scale=1.0 , maximum-scale=1 , minimun-scale=1"  > -->
+   <meta name="viewport" content="width=device-width,user-scalable=no ,initial-scale=1.0 , maximum-scale=1 , minimun-scale=1"  > 
  </head>
  <body>
-   
-   <h1>My Secret</h1>
+   <header>
+     <div class="contenedor">
+     <h1 class="icon-silence">My Secret</h1>
+     </div>
+   </header>
+   <br><br><br>
+  
    <h2> Fiesta sorpresa</h2>
       <label for="key">Ingrese un numero</label> 
       <input type="number" id="key" name="key" min="0" max="33" >
