--- a/src/index.html
+++ b/src/index.html
@@ -7,31 +7,27 @@
    <meta name="viewport" content="width=device-width,user-scalable=no ,initial-scale=1.0 , maximum-scale=1 , minimun-scale=1"  > 
  </head>
  <body>
-   <header>
-     <div class="contenedor">
-     <h1 class="icon-silence">My Secret</h1>
-     </div>
-   </header>
-   <br><br><br>
-  
-   <h2> Fiesta sorpresa</h2>
+
+      <h1 >My Secret</h1>
+      <h2> Fiesta sorpresa</h2>
       <label for="key">Ingrese un numero</label> 
-      <input type="number" id="key" name="key" min="0" max="33" >
+      <input type="number" id="key" name="key"  >
       <section id="encode">
         <label for="menssage-encode">Esconde tu mensaje secreto  </label>
         <br><br>
         <textarea  id="menssage-encode" ></textarea>
         <br>
-        <input type="button"  value="Esconder" id="button-encode">  
-      
+        <input type="button"  value="Cifrar" id="button-encode">  
       </section>
+      
       <section>
         <label for="menssage-decode">Muestra tu mensaje secreto</label>
         <br>
         <textarea  id="menssage-decode" ></textarea>  
+        <br>
         <input type="button" value="Mostrar"  id="button-decode">  
       </section>
-      <textarea name="" id="encodedecodemessage" readonly="readonly"></textarea>
+      <textarea name="" id="encodedecode-message" readonly="readonly"></textarea>
     <script src="cipher.js"></script>
     <script src="index.js"></script>
   </body>
