--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,16 @@
  </head>
  <body>
     <div class="header">
-    <h1 >My Secret  </h1>
-    <h2>❁Fiesta sorpresa❁</h2>
+    <h1 > ❁ My Secret ❁  </h1>
+    <!-- <h2>Fiesta sorpresa</h2> -->
     </div>
-      <section>
+    <div class="row">
+        <div class="side">
+            <h2>Fiesta Sorpresa</h2>
+            <p></p>
+             </div>  
+    <div class="main" >
+     <section>
         <label for="key">Ingrese un numero</label> 
         <input type="number" id="key" name="key"  >
       </section>
@@ -37,7 +43,11 @@
         <br>
          <textarea name="" id="encodedecode-message" readonly="readonly"></textarea>
       </section>
-     
+     </div> 
+     </div>
+     <div class="footer">
+        <h2></h2>
+      </div> 
     <script src="cipher.js"></script>
     <script src="index.js"></script>
   </body>
